--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@
     <header>
         <div class="top-header">
             <div class="logo">
-                <img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre">
+               <a href="/"><img src="images/logo-mercado-liebre.svg" alt="Logo de MercadoLiebre"></a>
             </div>
             <div class="form">
                 <form action="#" method="GET">
